tests/sksl/errors/Ossfuzz50798.glsl
### Compilation failed:

error: 1: array size must be an integer
int[abs(floatBitsToInt(-abs(0)))] x;
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
